tests/ucc/type/good/int-vs-ptr.c
int main(void)
{
    int a = 0;
    int *b = a;

    return a;
}
