tests/ucc/type/bad/bit-complement-ptr.c
int main(void)
{
    int* b;

    ~b;

    return 0;
}
